# ArbiSport

./: .gitignore  README.md  app.py  pyproject.toml
arb_engine/: calculations.py
controller/: scheduler.py
normalize/: markets.py  names.py
odds_client/: catalog.py  client.py  deep_markets.py
persistence/: database.py
tests/: test_arb_engine.py  test_database.py  test_scheduler.py
ui/: main.py
